--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title></title>
   <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=cyrillic" rel="stylesheet">
-  <link href="normalize.css" rel="stylesheet">
+  <link href="css/normalize.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 
@@ -13,20 +13,20 @@
   <header class="main-header">
     <nav class="main-navigation container" >
       <a class="main-header-logo" href="index.html">
-        <img src="http://assets.pencode.ru/barber/img/logo.png" width="111" height="24" alt="Логотип барбершопа Бородинский">
+        <img src="http://assets.pencode.ru/barber/img/logo.svg" width="111" height="24" alt="Логотип барбершопа Бородинский">
       </a>
-      <div class="main-navigation-wrapper">
-          <ul class="site-navigation">
-            <li><a href="info.html">Информация</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="price.html">Прайс-лист</a></li>
-            <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-          </ul>
-          <ul class="user-navigation">
-            <li class="login-link">Вход</li>
-          </ul>
-      </div>
+        <ul class="site-navigation">
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="price.html">Прайс-лист</a></li>
+          <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li>
+            <a class="login-link" href="login.html">Вход</a>
+          </li>
+        </ul>
     </nav>
   </header>
 
@@ -34,7 +34,7 @@
     <h1 class="page-title">Средства для ухода</h1>
 
     <ul class="breadcrumbs">
-      <li><a href="index.html">Главная</a></li>
+      <li><a href="index.html">Главная </a></li>
       <li><a href="catalog.html">Магазин</a></li>
       <li class="breadcrumbs-current">Средства для ухода</li>
     </ul>
@@ -44,7 +44,7 @@
         <h2 class="visually-hidden">Фильтр товаров</h2>
         <form class="filter" method="get" action="https://echo.htmlacademy.ru">
           <fieldset>
-            <legend>Производители</legend>
+            <legend>Производители:</legend>
             <ul>
               <li class="filter-option">
                 <input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
