Fixed modal on all pages

--- a/catalog-item.html
+++ b/catalog-item.html
@@ -117,9 +117,9 @@
         </p>
         <p>
           <label for="user-password" class="visually-hidden">Пароль</label>
-          <input class="pasword-icon-user" id="user-password" type="password" name="password" placeholder="Пароль">
+          <input class="password-icon-user" id="user-password" type="password" name="password" placeholder="Пароль">
         </p>
-        <p class="login-password-info">
+        <p class="login-help">
           <label class="login-checkbox">
             <input type="checkbox" name="remember" class="visually-hidden">
             <span class="checkbox-indicator"></span>
