--- a/catalog.html
+++ b/catalog.html
@@ -182,6 +182,7 @@
       </section>
     </div>
   </main>
+
   <footer class="main-footer">
     <div class="container">
       <p class="footer-contacts">
@@ -236,8 +237,7 @@
   </section>
   <section class="modal modal-map">
     <h2 class="visually-hidden">Как до нас добраться</h2>
-    <p>
-      <img src="http://assets.pencode.ru/barber/img/map.png" width="780" height="560" alt="Офис компании по адресу ул. Большая Конюшенная, 19/8, Санкт-Петербург">
+    <p><img src="http://assets.pencode.ru/barber/img/map.png" width="780" height="560" alt="Офис компании по адресу ул. Большая Конюшенная, 19/8, Санкт-Петербург"></p>
     <button class="modal-close" type="button">Закрыть</button>
   </section>
 </body>
